--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -4,8 +4,8 @@
 // $font-size-root: 20px;
 
 $material-light: (
-  "background": #fafafa
+  "background": #fafafa,
 );
-$body-font-family: "-apple-system", BlinkMacSystemFont, Roboto, "Noto Sans JP",
-  "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "メイリオ", Meiryo,
-  sans-serif;
+$body-font-family: "FlopDesignFONT", "-apple-system", BlinkMacSystemFont,
+  "Noto Sans JP", "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "メイリオ",
+  Meiryo, sans-serif;
