--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,6 +1,28 @@
 a {
   text-decoration: none;
 }
+body {
+  overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+  background-color: #0f172a;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 12px;
+  border: 4px solid #0f172a;
+  background-color: #4b5563;
+}
+
+img.emoji {
+  height: 1em;
+  width: 1em;
+  margin: 0 0.25em 0 0.25em;
+  vertical-align: -0.2em;
+  display: inline;
+}
 
 @font-face {
   font-family: FlopDesignFONT;
