💫 style: add page transition

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -16,3 +16,12 @@ img.emoji {
   font-weight: normal bold;
   font-display: swap;
 }
+
+.page-enter-active,
+.page-leave-active {
+  transition: opacity 0.3s;
+}
+.page-enter,
+.page-leave-to {
+  opacity: 0;
+}
