faet: enable page transition

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -19,9 +19,10 @@ img.emoji {
 
 .page-enter-active,
 .page-leave-active {
-  transition: opacity 0.3s;
+  transition: all 0.2s ease-in-out;
 }
-.page-enter,
+.page-enter-from,
 .page-leave-to {
   opacity: 0;
+  filter: blur(1rem);
 }
