--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,6 +9,5 @@
 }
 
 body {
-  font-family: 'Exo 2', '-apple-system', BlinkMacSystemFont,
-    Helvetica, Arial, Meiryo, sans-serif;
+  font-family: 'Exo 2', '-apple-system', BlinkMacSystemFont, Helvetica, Arial, Meiryo, sans-serif;
 }
