--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -17,8 +17,7 @@
 }
 
 :root {
-  --font-family:
-    'Exo 2', '-apple-system', BlinkMacSystemFont, Helvetica, Arial, Meiryo, sans-serif;
+  --font-family: 'Exo 2', '-apple-system', BlinkMacSystemFont, Helvetica, Arial, Meiryo, sans-serif;
 }
 
 body {
